--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lodash": "^3.6.0",
     "pretty-ms": "^2.1.0",
     "repeat-string": "^1.5.2",
-    "tap-out": "^2.0.0",
+    "tap-out": "thisconnect/tap-out#raw-with-stack",
     "through2": "^2.0.0"
   },
   "bin": {
